# -*- org -*-

* 5.1.4 YYY-MM-DD
** build system
   - It is now possible to gives a CABALFLAGS on the command line.
     The haskell code was instrumented to support a new option
     useThreaded.  This options is activated by default, but some
     architecture do not supporte threading, so in order to allow
     build and test on these architectures, is is possible to call
     configure like this.

     ./configure CABALFLAGS="-f -useThreaded"
* 5.1.3 2025-01-15
** Lib binoculars
   - it is now possible to mask a ring of n pixels around each module.
     Most of the times these pixel's statistics are bad.
** Binoculars-ng
   - Added float64 support for masks
   - It is possible to define a fall back for mask location with this
     syntax. `my_first_mask.npy | my_second_mask.npy`

* 5.1.0 2024-10-15
** General
   - 5.x runtime can be co-installed with the 4.x series.
   - hkl.h contain all the Public API.
   - A clear separation between the public and private API was
     achieved, in order to propose a Long Time Support of the
     5.x series.
   - c-tap-hardness library was embeded to provide the unit test
     framework.
   - gobject-instrospection provide the binding support. Look at this
     [[https://gi.readthedocs.io/en/latest/][page]] for more informations.
   - Documentation was generated with org-mode and asymptote for the figures.
   - New diffractometers added
     - APS POLAR thanks to Pete R. Jemian <jemian@anl.gov>.
     - E4CH (eulerian 4 circles horizontal) geometry.
     - MARS beamline (SOLEIL) eulerian 4 circles vertical geometry.
     - SOLEIL SIRIUS KAPPA
     - SOLEIL SIRIUS TURRET
   - New Pseudo Axes engines.
     - qper_qpar
   - A not yet public hkl3d library used only by the gui allow to
     compute (Bullet) and display (OpenGL) collision for model
     described using the COLLADA file format.
   - all private symbols are now hidden.
** Binoculars-ng
   - Added this new program in order to project 2D Detectors images in