@@ -1,5 +1,5 @@
 [dispatcher]
-# ncores =
+ncores = 6
 destination = scan_{first}-{last}.hdf5
 overwrite = false
 [input]
