@@ -1,7 +1,8 @@
+
 # -*- org -*-
 
 * 5.1.4 YYY-MM-DD
-** build system
+** Build system
    - It is now possible to gives a CABALFLAGS on the command line.
      The haskell code was instrumented to support a new option
      useThreaded.  This options is activated by default, but some
@@ -10,6 +11,10 @@
      configure like this.
 
      ./configure CABALFLAGS="-f -useThreaded"
+** Binoculars-ng
+   - dispatcher.ncores = 0 mean: use all capabilities of the CPU hardware.
+     The default remains equal to `4` if this property is not defined.
+
 * 5.1.3 2025-01-15
 ** Lib binoculars
    - it is now possible to mask a ring of n pixels around each module.
